--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -43,12 +43,14 @@
 .slideshow-element__slide {
 	width: 70%;
 	height: auto;
-	margin-right: 2em;
+	margin-right: 2rem;
+	margin-bottom: 2em;
 }
 
 @media only screen and (max-width: 1024px) {
 	.slideshow-element__slide {
-		width: 100%;
+		width: 80%;
+		margin-right: 1rem;
 	}
 }
 
